<resources>
    <string name="app_name">Wukung</string>


    <!-- sort -->
    <string name="sort_default">综合</string>
    <string name="sort_by_distance">距离</string>
    <string name="sort_by_sales">销量</string>
    <string name="sort_by_score">评分</string>
    <string name="sort_by_price">价格</string>


    <!-- filter -->
    <string name="filter_button">筛选</string>
    <string name="city_sh">上海</string>
    <string name="city_bj">北京</string>
    <string name="city_sz">深圳</string>


    <!-- button -->
    <string name="reset_button">重置</string>
    <string name="confirm_button">确定</string>
    <string name="start_button">开始</string>


    <!-- activity title -->
    <string name="main_activity_title">主页</string>
    <string name="lists_activity_title">列表</string>
    <string name="layout_activity_title">Layout</string>
    <string name="countdown_activity_title">倒计时</string>
    <string name="app_light_activity_title">AppLight</string>
    <string name="app_day_night_activity_title">AppDayNight</string>
    <string name="app_material_activity_title">AppMaterial</string>
    <string name="ks_main_activity_title">KsMain</string>


    <!-- Settings-->
    <string name="settings_activity_title">设置</string>
    <string name="settings_night_mode">夜间模式</string>
    <string name="settings_night_mode_auto">跟随系统</string>
    <string name="settings_night_mode_manually">手动选择</string>
    <string name="settings_night_mode_night">夜间模式</string>
    <string name="settings_night_mode_day">普通模式</string>


    <!-- test data -->
    <string name="test_simple_text">云想衣裳花想容，春风拂槛露华浓。若非群玉山头见，会向瑶台月下逢。</string>
    <string name="test_short_text">云想衣裳花想容</string>
    <string name="libai">李白</string>
</resources>
