<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/settings_night_mode">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="15dp"
            android:text="保存" />
    </androidx.appcompat.widget.Toolbar>

    <Switch
        android:id="@+id/switch_follow_system"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:padding="20dp"
        android:text="@string/settings_night_mode_auto"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <TextView
        android:id="@+id/text_view_set_manually"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingTop="20dp"
        android:paddingEnd="20dp"
        android:paddingBottom="10dp"
        android:text="@string/settings_night_mode_manually"
        app:layout_constraintTop_toBottomOf="@id/switch_follow_system" />

    <RadioGroup
        android:id="@+id/radio_group_modes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/text_view_set_manually">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/radio_button_night_mode_day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:button="@null"
            android:drawableEnd="?android:attr/listChoiceIndicatorSingle"
            android:padding="20dp"
            android:text="@string/settings_night_mode_day" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/radio_button_night_mode_night"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:button="@null"
            android:drawableEnd="?android:attr/listChoiceIndicatorSingle"
            android:padding="20dp"
            android:text="@string/settings_night_mode_night" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>