<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/assist_bar_bg">

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rb_bj"
            style="@style/AppWidgetOverlay.RadioButton.PopupWindowItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/city_bj"
            tools:checked="true" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_height_1px"
            android:background="@color/divider_color" />

        <RadioButton
            android:id="@+id/rb_sh"
            style="@style/AppWidgetOverlay.RadioButton.PopupWindowItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/city_sh" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_height_1px"
            android:background="@color/divider_color" />

        <RadioButton
            android:id="@+id/rb_sz"
            style="@style/AppWidgetOverlay.RadioButton.PopupWindowItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/city_sz" />
    </RadioGroup>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height_1px"
        android:background="@color/divider_color"
        app:layout_constraintTop_toBottomOf="@id/radio_group" />

    <Button
        android:id="@+id/btn_reset"
        style="@style/AppWidgetOverlay.Button.Transparent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/reset_button"
        app:layout_constraintEnd_toStartOf="@+id/btn_divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider" />

    <View
        android:id="@+id/btn_divider"
        android:layout_width="@dimen/divider_height_1px"
        android:layout_height="0dp"
        android:background="@color/divider_color"
        app:layout_constraintBottom_toBottomOf="@id/btn_reset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/btn_reset" />

    <Button
        android:id="@+id/btn_confirm"
        style="@style/AppWidgetOverlay.Button.Transparent.Active"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/confirm_button"
        app:layout_constraintBottom_toBottomOf="@id/btn_reset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_divider"
        app:layout_constraintTop_toTopOf="@id/btn_reset" />
</androidx.constraintlayout.widget.ConstraintLayout>
