<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/AppFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="20dp">

    <com.google.android.flexbox.FlexboxLayout
        style="@style/AppLayout.Card.Padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:alignItems="center"
        app:flexDirection="row"
        app:flexWrap="nowrap"
        app:justifyContent="flex_start">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/test_short_text"
            app:layout_flexShrink="1" />

        <TextView
            style="@style/AppWidgetOverlay.TextView.Label.Padding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/drawable_padding"
            android:text="@string/libai"
            app:layout_flexShrink="0" />
    </com.google.android.flexbox.FlexboxLayout>

    <com.google.android.flexbox.FlexboxLayout
        style="@style/AppLayout.Card.Padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:alignItems="center"
        app:flexDirection="row"
        app:flexWrap="nowrap"
        app:justifyContent="flex_start">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/test_simple_text"
            app:layout_flexShrink="1" />

        <TextView
            style="@style/AppWidgetOverlay.TextView.Label.Padding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/drawable_padding"
            android:text="@string/libai"
            app:layout_flexShrink="0" />
    </com.google.android.flexbox.FlexboxLayout>

    <com.google.android.flexbox.FlexboxLayout
        style="@style/AppLayout.Card.Padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:alignItems="flex_start"
        app:flexDirection="row"
        app:flexWrap="nowrap"
        app:justifyContent="flex_start">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_simple_text"
            app:layout_flexShrink="1" />

        <TextView
            style="@style/AppWidgetOverlay.TextView.Label.Padding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/drawable_padding"
            android:text="@string/libai"
            app:layout_flexShrink="0" />
    </com.google.android.flexbox.FlexboxLayout>
</LinearLayout>